<resources>
    <string name="app_name" translatable="false">PillApp</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>

    <string name="title_measuring">Measuring</string>
    <string name="title_medication">Medication</string>
    <string name="title_new_course">New course</string>
    <string name="title_edit_course">Edit course</string>

    <string name="add_medication">Medication</string>
    <string name="add_temperature">Temperature</string>
    <string name="add_pressure">Blood Pressure</string>

    <string name="add_medication_title">Add medication</string>
    <string name="add_temperature_title">Add temperature</string>
    <string name="add_pressure_title">Add pressure</string>

    <string name="edit_temperature_title">Edit temperature</string>
    <string name="edit_pressure_title">Edit pressure</string>

    <string name="tool_back_description" translatable="false">back</string>
    <string name="add_date">Date</string>
    <string name="add_time">Time</string>

    <string name="save_message" translatable="false">Saved!</string>
    <string name="not_filled_message" translatable="false">Before filled value</string>
    <string name="bottom_pressure">Bottom pressure</string>
    <string name="top_pressure">Top pressure</string>
    <string name="pulse">Pulse</string>

    <string name="add_tablet">Tablet</string>
    <string name="add_capsule">Capsule</string>
    <string name="add_drops">Drops</string>
    <string name="add_injection">Injection</string>
    <string name="add_mixture">Mixture</string>
    <string name="add_spray">Spray</string>
    <string name="add_powder">Powder</string>
    <string name="add_ointment">Ointment</string>
    <string name="add_suppository_capsule">Candles</string>
    <string name="add_other">Other</string>
    <string name="measuring_today">Today</string>
    <string name="measuring_period">Period</string>

    <string name="dosage">Dosage is %1$s</string>
    <string name="count_in_day">%1$s times in day</string>

    <string name="before_eat">Before meal</string>
    <string name="after_eat">After meal</string>
    <string name="on_eat">In time of meal</string>

    <string name="whatever_eat">Whatever eat</string>
    <string name="text_end">End %1$s in %2$s</string>
    <string name="text_start_in">Start %1$s in %2$s</string>
    <string name="hint_name">Medication name</string>
    <string name="complete_course">Complete</string>
    <string name="change_course">Change</string>
    <string name="delete_course">Delete</string>
    <string name="pick_times_in_day">Pick times in day</string>
    <string name="ok" translatable="false">OK</string>
    <string name="dependency_of_eat">Dependency of eat</string>
    <string name="time_for_eat">Minutes</string>
    <string name="hint_eat_time" translatable="false">15</string>

    <string name="notify_msg" translatable="false">Pill ready</string>

    <string name="daily">Every day</string>
    <string name="weekly">Every second day</string>

    //Exit dialog
    <string name="exit_title">Exit</string>
    <string name="exit_description">Are you sure you want to quit?</string>
    <string name="cancel_btn">Cancel</string>
    <string name="exit_btn">Exit</string>

    <string name="app_id" translatable="false">ca-app-pub-7097853215442719~6554483107</string>
    <string name="main_ad" translatable="false">ca-app-pub-7097853215442719/1577488596</string>
    <string name="course_ad" translatable="false">ca-app-pub-7097853215442719/1577488596</string>
    <string name="medication_ad" translatable="false">ca-app-pub-7097853215442719/1577488596</string>
    <string name="temperature_ad" translatable="false">ca-app-pub-7097853215442719/1577488596</string>
    <string name="pressure_ad" translatable="false">ca-app-pub-7097853215442719/1577488596</string>
    <string name="exit_ad" translatable="false">ca-app-pub-7097853215442719/1577488596</string>

</resources>
