<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"

              android:layout_width="wrap_content"
              android:layout_height="match_parent">

    <TextView android:text="@string/dependency_of_eat"
              android:gravity="center"
              android:layout_marginTop="12dp"
              style="@style/TitleDialog"
              android:layout_marginStart="24dp"
              android:layout_marginEnd="24dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

    <RadioGroup
            android:id="@+id/group_eat_type"
            android:layout_marginTop="16dp"
            android:layout_marginStart="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/before_mode"
                android:text="@string/before_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/on_eat_mode"
                android:text="@string/on_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/after_mode"
                android:text="@string/after_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RadioGroup>

    <LinearLayout
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/edit_eat_time"
                android:gravity="center_horizontal"
                android:hint="@string/hint_eat_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginStart="12dp"
                android:textSize="18sp"
                android:textColor="@color/main_text_color"
                android:text="@string/time_for_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button android:text="@string/ok"
            android:id="@+id/btn_accept_eat"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>