<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:text="@string/measuring_period"
              style="@style/TitleDialog"
              android:layout_marginTop="16dp"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <Button android:id="@+id/btn_daily"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/daily"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button android:id="@+id/btn_double_day"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/weekly"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>