<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/medication_bg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_tablet"
                android:id="@+id/schedule_icon"
                tools:ignore="ContentDescription"/>

        <TextView
                android:id="@+id/schedule_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/MedicationItemText"
                tools:text="Таблетка"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:srcCompat="@drawable/indicator"
                android:id="@+id/schedule_before_eat"
                tools:ignore="ContentDescription"/>
        <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/ic_dish"
                android:id="@+id/imageView"
                tools:ignore="ContentDescription"/>
        <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:srcCompat="@drawable/indicator"
                android:id="@+id/schedule_after_eat"
                android:layout_marginStart="8dp"
                tools:ignore="ContentDescription"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/container_buttons"
                  android:layout_width="match_parent"
                  android:visibility="gone"
                  android:layout_height="48dp"
                  android:orientation="horizontal">

        <Button android:id="@+id/button_complete"
                android:text="@string/complete_course"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        <Button android:id="@+id/button_change"
                android:layout_weight="1"
                android:text="@string/change_course"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        <Button android:id="@+id/button_delete"
                android:text="@string/delete_course"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>


