<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include android:id="@+id/include"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             layout="@layout/toolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/edit_data"
              tools:text="10.05.2019"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintBottom_toBottomOf="@+id/textView2"
              app:layout_constraintTop_toTopOf="@+id/textView2"
              app:layout_constraintStart_toEndOf="@+id/textView2"
              android:layout_marginStart="32dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_check"
            android:id="@+id/button_save"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"/>

    <TextView
            android:text="@string/add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/include"
            android:layout_marginStart="24dp"/>

    <TextView
            android:text="@string/add_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_time"
            tools:text="16:05"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="32dp"/>

    <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/edit_top_pressure"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            android:importantForAutofill="no"
            tools:targetApi="o" tools:ignore="LabelFor"/>

    <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/edit_bottom_pressure"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            android:importantForAutofill="no"
            tools:targetApi="o" tools:ignore="LabelFor"/>

    <TextView
            android:text="@string/top_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <TextView
            android:text="@string/bottom_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/barrier"
            app:barrierDirection="end"
            app:constraint_referenced_ids="textView,textView3"
            tools:layout_editor_absoluteX="411dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>